<resources>
    <string name="app_name">Barca Team</string>
    <string name="title">Title</string>
    <string name="player_name">Nama Pemain</string>
    <string name="description">Deskripsi</string>
    <string name="player_position">Posisi Pemain</string>
    <string name="dev_name">Mohammad Zaghy Zalayetha Sofjan</string>
    <string name="dev_email">zalayetha@gmail.com</string>
    <string name="about">About Page</string>
    <string name="action_share_title">Share</string>
    <string-array name="data_player_name">

        <item>Marc-André ter Stegen</item>
        <item>Iñaki Peña</item>


        <item>João Cancelo</item>
        <item>Alejandro Balde</item>
        <item>Ronald Araujo</item>
        <item>Íñigo Martínez</item>
        <item>Andreas Christensen</item>
        <item>Marcos Alonso</item>
        <item>Jules Kounde</item>


        <item>Gavi</item>
        <item>Pedri</item>
        <item>Fermín López</item>
        <item>Oriol Romeu</item>
        <item>Sergi Roberto</item>
        <item>Frenkie de Jong</item>
        <item>Ilkay Gündogan</item>


        <item>Ferran Torres</item>
        <item>Robert Lewandowski</item>
        <item>Raphinha</item>
        <item>João Félix</item>
        <item>Vitor Roque</item>
    </string-array>
    <string-array name="data_position_name">
        <item>Goalkeeper</item>
        <item>Goalkeeper</item>

        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>

        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>

        <item>Forward</item>
        <item>Forward</item>
        <item>Forward</item>
        <item>Forward</item>
        <item>Forward</item>

    </string-array>
    <string-array name="data_desc_overview">

        <item>A keeper with great reflexes and also excellent with the ball at his feet</item>
        <item>Iñaki Peña is a Barça-style goalkeeper: he reads the game well and can use his feet well</item>


        <item>Supreme right back who had already excelled at a number of top clubs before his loan to Barça</item>
        <item>Skill and strength make Alejandro Balde a fast, explosive fullback who can also support the attack</item>
        <item>Uruguayan defender, strong in the air and capable with the ball at his feet</item>
        <item>After more than a decade playing at the top level in Spain, Iñigo has proven his qualities at centre back</item>
        <item>Centre back with brilliant passing skills and a tremendous reading of the game. Fabulous and finding the right route to get the ball forward</item>
        <item>Skilful full back or sweeper with a fine left foot</item>
        <item>Jules Kounde is known for being a very fast defender, quick to intercept, and being good on the ball</item>


        <item>Technically gifted midfielder with plenty of character and a good reader of the game</item>
        <item>The player enjoys playing on the front foot, driving at his direct opponent and having his passes break the defensive lines</item>
        <item>Culer since 2012/13, and back after a brief spell at Linares, he is now a better quality footballer than ever</item>
        <item>A powerful and very talented player with an intimate knowledge of the Barça playing style</item>
        <item>Sergi Roberto is one of the most versatile players in the squad and is known for his ability to get into the box</item>
        <item>His versatility, energy and great vision have allowed him to continue developing his skills in any midfield position</item>
        <item>With extensive experience of elite football, Gündoğan is an all-round midfielder who has also developed into a great goalscorer</item>


        <item>He brings together various talents which allow him to operate anywhere up front</item>
        <item>One of the best strikers ever, the Polish forward\'s stats speak for themselves</item>
        <item>A technically gifted, skill winger with great dribbling skills and combination play</item>
        <item>Lights up football with the creative flair and talent in the final third of the field</item>
        <item>A very versatile mobile centre forward with an eye for goal who can link and make darting runs</item>
    </string-array>
</resources>